Switch to use StandardCharset.UTF_8 instead of string literal
Former-commit-id: 173ec8971c78dd7c8fc311617b6e25718af23da8